--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -2,49 +2,56 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:hardwareAccelerated="true"
     android:orientation="vertical"
     android:padding="16dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
-        android:layout_width="0dp"
+        android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
 
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="2dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
 
-        app:cardBackgroundColor="@color/cardview_light_background"
+        android:background="@drawable/myrect"
+
+        android:clickable="true"
+
+        android:foreground="?attr/selectableItemBackground"
+
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </GridLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.484">
 
         <LinearLayout
             android:id="@+id/card_top_half"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <FrameLayout
+                android:id="@+id/card_cipher_frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="140dp">
+                android:layout_height="142dp">
 
                 <TextView
                     android:id="@+id/card_preview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="158dp"
                     android:padding="16dp"
+                    android:paddingLeft="25dp"
                     android:text="PREVIEW"
                     android:textColor="@color/cardview_dark_background" />
             </FrameLayout>
@@ -52,14 +59,13 @@
             <LinearLayout
                 android:id="@+id/card_bottom_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white_overlay"
+                android:layout_height="52dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/card_title"
-                    android:layout_width="554dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="577dp"
+                    android:layout_height="75dp"
                     android:layout_weight="1"
                     android:padding="16dp"
                     android:text="TITLE"
