--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
@@ -11,6 +11,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -30,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/colorAccent"
+        app:background="@drawable/button_gradient"
         app:srcCompat="@mipmap/ic_add_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
