--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_gui_about_us.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_gui_about_us.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.FYP.aardvark_project.GUI_aboutUs"
-    tools:showIn="@layout/activity_gui_about_us">
+    tools:showIn="@layout/activity_about_us">
 
     <TextView
         android:id="@+id/about_us_activity_title"
@@ -26,7 +26,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:text="This is intro text, set everything from the java file"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
