--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_permutation.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_permutation.xml
@@ -10,7 +10,7 @@
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="382dp"
+            android:layout_height="397dp"
             android:fillViewport="true">
 
             <FrameLayout
@@ -21,7 +21,11 @@
                 <TextView
                     android:id="@+id/perm_cTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/primaryTextColor" />
             </FrameLayout>
 
         </android.support.v4.widget.NestedScrollView>
@@ -34,7 +38,8 @@
             <TextView
                 android:id="@+id/seekBar_space_indicator"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/primaryTextColor" />
 
             <SeekBar
                 android:id="@+id/seekBar_space"
@@ -44,18 +49,14 @@
             <TextView
                 android:id="@+id/seekBar_line_indicator"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/primaryTextColor" />
 
             <SeekBar
                 android:id="@+id/seekBar_line"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <Button
-                android:id="@+id/button_permutate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="/*DELETE THIS BUTTON*/" />
         </LinearLayout>
 
     </LinearLayout>
