Minor bug fixes

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
@@ -12,14 +12,15 @@
 
     <!--DUMMY ITEM, TO PREVENT EDIT TEXT FROM RECEIVING FOCUS UPON CREATING ACTIVITY-->
     <LinearLayout
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:id="@+id/dummyLayout"
         android:layout_width="0px"
-        android:layout_height="0px"/>
+        android:layout_height="0px"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
     <EditText
         android:id="@+id/searchBar"
-        android:layout_width="370dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
