--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash_full_screen.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash_full_screen.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/copyright_text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
