--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_enc_dec.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_enc_dec.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.FYP.aardvark_project.GUI_Enc_Dec">
+    android:animateLayoutChanges="true"
+    tools:context="com.example.FYP.aardvark_project.Activity_Enc_Dec">
 
     <FrameLayout
         android:id="@+id/upperLayout"
