--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_analysis.xml
@@ -4,94 +4,193 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_marginBottom="10dp"
+    android:animateLayoutChanges="true"
 
-    android:animateLayoutChanges="true">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ScrollView
-        android:paddingTop="24dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:paddingTop="24dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/graph_lot"
+            <android.support.v7.widget.CardView
+                android:id="@+id/analysis_graph_card_view"
                 android:layout_width="match_parent"
-                android:layout_height="195dp"
-                android:layout_weight="1"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="85dp" />
-
-            <FrameLayout
-                android:id="@+id/layout_period"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="175dp">
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <LinearLayout
-                    android:layout_width="368dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    tools:layout_editor_absoluteX="8dp"
-                    tools:layout_editor_absoluteY="8dp">
+                    android:orientation="vertical">
 
-                    <android.support.constraint.ConstraintLayout
+                    <com.jjoe64.graphview.GraphView
+                        android:id="@+id/graph_lot"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="195dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="85dp" />
+
+                    <TextView
+                        android:id="@+id/analysis_key_value"
+                        android:layout_width="match_parent"
+                        android:layout_height="41dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="[KEY]"
+                        android:textAlignment="center" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/button_period"
+                            android:id="@+id/button_analysis_shift_left"
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:text="Period: N"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </android.support.constraint.ConstraintLayout>
+                            android:layout_weight="1"
+                            android:text="Shift Left" />
 
-                    <TextView
-                        android:id="@+id/period_indicator"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        <Button
+                            android:id="@+id/button_analysis_shift_right"
+                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Shift right" />
+                    </LinearLayout>
 
-                    <SeekBar
-                        android:id="@+id/seekBar_period"
-                        style="@style/Widget.AppCompat.SeekBar.Discrete"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:max="10"
-                        android:progress="3" />
                 </LinearLayout>
-
-            </FrameLayout>
+            </android.support.v7.widget.CardView>
 
             <TextView
-                android:id="@+id/cipherICTextView"
+                android:id="@+id/dummy1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/cipherICFreqView" />
+                android:text="TextView"
+                android:visibility="invisible" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/analysis_period_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <FrameLayout
+                    android:id="@+id/layout_period"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="175dp">
+
+                    <LinearLayout
+                        android:layout_width="368dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="8dp">
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <Button
+                                android:id="@+id/button_period"
+                                style="@style/Widget.AppCompat.Button.Borderless"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:text="Period: N"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <SeekBar
+                                android:id="@+id/seekBar_period"
+                                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="9dp"
+                                android:max="10"
+                                android:padding="20dp"
+                                android:paddingLeft="16dp"
+                                android:paddingRight="16dp"
+                                android:progress="3"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
+
+                            <TextView
+                                android:id="@+id/period_indicator"
+                                android:layout_width="match_parent"
+                                android:layout_height="33dp"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="8dp"
+                                android:padding="20dp"
+                                android:visibility="visible"
+                                app:layout_constraintBottom_toTopOf="@+id/seekBar_period"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/button_period" />
+
+                        </android.support.constraint.ConstraintLayout>
+
+                    </LinearLayout>
+
+                </FrameLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/dummy2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:visibility="invisible" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/analysis_IC_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/cipherICTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingTop="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/cipherICFreqView" />
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
     </ScrollView>
