--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency__period.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency__period.xml
@@ -15,86 +15,114 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/graph_freq_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/graph_period_lot"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="85dp" />
-        </FrameLayout>
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <SeekBar
-                android:id="@+id/period_seekBar"
-                android:layout_width="270dp"
-                android:layout_height="15dp"
-                android:layout_marginBottom="13dp"
-                android:layout_marginEnd="57dp"
-                android:layout_marginStart="57dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/period_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
-
-            <TextView
-                android:id="@+id/period_indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:layout_marginEnd="150dp"
-                android:layout_marginStart="163dp"
-                android:layout_marginTop="4dp"
-                android:text="INDICATOR"
-                app:layout_constraintBottom_toTopOf="@+id/period_seekBar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/period_button"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="144dp"
-                android:layout_height="47dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="118dp"
-                android:layout_marginStart="119dp"
-                android:layout_marginTop="8dp"
-                android:text="PERIOD #"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/period_seekBar" />
-        </android.support.constraint.ConstraintLayout>
-
-        <ScrollView
+        <android.support.v7.widget.CardView
+            android:id="@+id/frequency_period_upper_card_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/graph_period_detail"
+                <FrameLayout
+                    android:id="@+id/graph_freq_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <com.jjoe64.graphview.GraphView
+                        android:id="@+id/graph_period_lot"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="85dp" />
+                </FrameLayout>
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <SeekBar
+                        android:id="@+id/period_seekBar"
+                        android:layout_width="270dp"
+                        android:layout_height="15dp"
+                        android:layout_marginBottom="13dp"
+                        android:layout_marginEnd="57dp"
+                        android:layout_marginStart="57dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toTopOf="@+id/period_button"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/period_indicator" />
+
+                    <TextView
+                        android:id="@+id/period_indicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="7dp"
+                        android:layout_marginEnd="150dp"
+                        android:layout_marginStart="163dp"
+                        android:layout_marginTop="4dp"
+                        android:text="INDICATOR"
+                        app:layout_constraintBottom_toTopOf="@+id/period_seekBar"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/period_button"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="144dp"
+                        android:layout_height="47dp"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginEnd="118dp"
+                        android:layout_marginStart="119dp"
+                        android:layout_marginTop="8dp"
+                        android:text="PERIOD #"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/period_seekBar" />
+                </android.support.constraint.ConstraintLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="289dp"
+            android:layout_weight="1"
+            android:text="TextView"
+            android:visibility="invisible" />
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/frequency_period_lower_card_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Please set Maximum period" />
-            </LinearLayout>
-        </ScrollView>
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/graph_period_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Please set Maximum period" />
+                </LinearLayout>
+            </ScrollView>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
