--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph_frequency_letter.xml
@@ -15,44 +15,72 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/graph_freq_layout"
+        <android.support.v7.widget.CardView
+            android:id="@+id/frequency_letter_upper_card_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/graph_freq_lot"
+            <FrameLayout
+                android:id="@+id/graph_freq_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="85dp" />
-        </FrameLayout>
+                android:layout_weight="1">
 
-        <Spinner
-            android:id="@+id/graph_frequency_spinner"
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/graph_freq_lot"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    tools:layout_editor_absoluteX="8dp"
+                    tools:layout_editor_absoluteY="85dp" />
+            </FrameLayout>
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/textView4"
             android:layout_width="match_parent"
-            android:layout_height="363dp"
-            android:layout_weight="1" />
+            android:layout_height="298dp"
+            android:layout_weight="1"
+            android:text="TextView"
+            android:visibility="invisible" />
 
-        <ScrollView
+        <android.support.v7.widget.CardView
+            android:id="@+id/frequency_letter_lower_card_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/graph_frequency_detailed_text_view"
+                <Spinner
+                    android:id="@+id/graph_frequency_spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Graph frequency detail" />
+                    android:layout_height="63dp"
+                    android:layout_weight="1" />
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/graph_frequency_detailed_text_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Graph frequency detail" />
+                    </LinearLayout>
+                </ScrollView>
             </LinearLayout>
-        </ScrollView>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
