--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.FYP.aardvark_project.GUI_MainActivity"
+    tools:context="com.example.FYP.aardvark_project.Activity_Main"
 
     android:animateLayoutChanges="true">
 
