--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/dragable_input.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/dragable_input.xml
@@ -19,39 +19,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:id="@+id/dragable_scroll_view"
+    <FrameLayout
+        android:id="@+id/dragable_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
+            android:id="@+id/dragable_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/dragable_button_apply"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Apply Kamasutra Cipher" />
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/dragable_button_reset"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Reset"
-                android:textSize="8sp"
-                tools:layout_editor_absoluteY="511dp" />
+                <Button
+                    android:id="@+id/dragable_button_apply"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Apply Kamasutra Cipher" />
 
-            <GridLayout
-                android:id="@+id/dragable_grid_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                <Button
+                    android:id="@+id/dragable_button_reset"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Reset"
+                    android:textSize="8sp"
+                    tools:layout_editor_absoluteY="511dp" />
 
-            </GridLayout>
-        </LinearLayout>
-    </ScrollView>
+                <GridLayout
+                    android:id="@+id/dragable_grid_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </GridLayout>
+            </LinearLayout>
+        </ScrollView>
+    </FrameLayout>
 
 </LinearLayout>
